# gl-validation-layer

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/gl_layer/: context.h
include/gl_layer/private/: context.h  types.h
src/: context.cpp  shader.cpp  texture.cpp
tests/: CMakeLists.txt  main.cpp
tests/glad/include/glad/: glad.h
tests/glad/src/: glad.c
tests/shaders/: frag.glsl  vert.glsl
